separate fast & slow test
Signed-off-by: Murphy <mofei@starrocks.com>